fix contrast

--- a/slides/themes/marp-actsis.css
+++ b/slides/themes/marp-actsis.css
@@ -101,10 +101,10 @@ text {
     color: var(--text);
 }
 ul {
-    color: var(--subtle);
+    color: var(--text);
 }
 li {
-    color: var(--subtle);
+    color: var(--text);
 }
 img {
     background-color: var(--highlight-low);
